# Golf-Handicap-Calculation

./: .env.sample  .gitignore  Makefile  README.md  _pyproject.toml  analysis.py  index_calculation.py  json_downloader_requests.py  main.py  pyproject.toml  requirements.txt  scrape_golfshot_selenium.py  scrape_scorecards.py  setup.py  untitled2.py  whs_calculation.py
.github/workflows/: python-ci.yml
data/courses/: KGgJ-quinta-do-perú-quinta-do-conde.json  ovvz-aroeira-golf-club-aroeira-i-charneca-da-caparica.json  pRR1-aroeira-golf-club-aroeira-ii-charneca-da-caparica.json
data/rounds/: J1ogO2.json  XPEMo5.json  om5ly3.json  vw3WZr.json
data/scorecards/: Jerome Roeser_hcp-26.7_Golf_F.xlsx  Jerome Roeser_hcp-26.7_Resort_M.xlsx  Jerome Roeser_hcp-26.7_do_F.xlsx  scorecard_0.xlsx  scorecard_1.xlsx  scorecard_2.xlsx  scorecard_3.xlsx  scorecard_4.xlsx
golf_handicap_calculation/: main.py
golf_handicap_calculation/database/: make_database.py  scrape_rounds.py
golf_handicap_calculation/oop/: data.py  differential_scores.py
old/: drafts.py
src/database/: make_database.py  scrape_rounds.py
src/golf_handicap_calculation/: main.py
src/oop/: data.py  differential_scores.py
templates/: YOUR_NAME_DATE_COLF CLUB NAME - COURSE NAME_TEES - SSS  SLOPE _Course Handicap - COURSE-HCP.xlsx  _fiche_historique_index.xlsx  _scorecard.xlsx
tests/: test_database.py
world_handicap_calculator/: analysis.py  main.py  params.py
world_handicap_calculator/database/: create_sql.ipynb  make_database.py  scrape_rounds.py
world_handicap_calculator/interface/: main.py  (+1 more)
(+5 files in other folders)
