[tool.poetry]
name = "golf-handicap-calculation"
version = "0.1.0"
description = ""
authors = ["jerome roeser <jerome.roeser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
numpy = "^2.1.2"
pandas = "^2.2.3"
lxml = "^5.3.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
